<resources>
    <string name="app_name">Habits</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="nav_header_title">Habits</string>
    <string name="nav_header_subtitle">Your habit coach</string>
    <string name="nav_header_desc">Menu</string>

    <string name="confirmation">Confirmation</string>
    <string name="startup_tasks">Do you want to start with example tasks?</string>

    <string name="menu_tasks">Task Planning</string>
    <string name="menu_manage">Configure</string>
    <string name="menu_today">Today's tasks</string>
    <string name="menu_stats">Statistics</string>

    <string name="section_general">General</string>
    <string name="section_options">Options</string>

    <string name="option_view_deleted">View deleted tasks</string>
    <string name="stats_total">Total Tasks</string>
    <string name="stats_completed">Completed tasks</string>
    <string name="stats_incompleted">Incompleted tasks</string>
    <string name="stats_overall">Overall Stats</string>
    <string name="stats_today">Today Stats</string>

    <string name="enabled">Enabled</string>
    <string name="language">Language</string>
    <string name="minutes">Minutes</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="frequency">Frequency</string>

    <string name="task">Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_category">Category</string>
    <string name="task_status">Status</string>
    <string name="task_description">Description</string>
    <string name="task_time">Time</string>

    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="one_time">One time</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekend</string>


    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="menu_yesterday">Yesterday</string>

    <string name="health">Health</string>
    <string name="study">Study</string>
    <string name="work">Work</string>
    <string name="financial">Financial</string>
    <string name="home">Home</string>
    <string name="entertainment">Entertainment</string>
    <string name="other">Other</string>
    <string name="option_notifications">Notifications</string>

    <string name="msg_tasks_pending">%d pending task(s) for today</string>
    <string name="tasks_by_category">Tasks by category</string>


</resources>
