<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/option_view_deleted_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/option_view_deleted" />



    <Switch
        android:id="@+id/option_view_deleted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/enabled" />

    <TextView
        android:id="@+id/option_locale_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/language" />

    <Spinner
        android:id="@+id/option_locale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>